--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
+:root{
+  --color_style:#2896D6;
 
+}
 * {
   margin: 0;
   padding: 0;
@@ -47,7 +50,7 @@ header {
 .menu__side {
   width: 80px;
   height: 100%;
-  background: #003a5f;
+  background: var(--color_style);
   position: fixed;
   top: 0;
   left: 0;
@@ -56,7 +59,7 @@ header {
   z-index: 300;
   overflow: hidden;
   overflow-y: scroll;
-  border-right: 20px solid #003a5f;
+  border-right: 20px solid var(--color_style);
   transition: all 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
 }
 
@@ -103,7 +106,6 @@ header {
 
 .options__menu .option {
   padding: 20px 0px;
-  display: flex;
   align-items: center;
   position: relative;
 }
@@ -115,7 +117,7 @@ header {
 }
 
 .options__menu .option h4 {
-  font-weight: 300;
+  font-weight: bold;
   cursor: pointer;
 }
 
@@ -166,7 +168,7 @@ a.selected {
 }
 
 .contenedor-tabla thead tr {
-  background-color: #003a5f;
+  background-color:v var(--color_style);
   color: #ffffff;
   text-align: left;
   font-weight: bold;
@@ -186,17 +188,17 @@ a.selected {
 }
 
 .contenedor-tabla tbody tr:last-of-type {
-  border-bottom: 2px solid #003a5f;
+  border-bottom: 2px solid var(--color_styles);
 }
 
 .contenedor-tabla tbody tr.fila-activa {
   font-weight: bold;
-  color: #003a5f;
+  color: var(--color_style);
 }
 
 .title_table {
   text-align: center;
-  color: #003a5f;
+  color: var(--color_style);
   font-size: 2rem;
   margin-bottom: 3rem;
 }
@@ -254,7 +256,7 @@ a.selected {
 }
 .btn-nv {
   display: inline-block;
-  background-color: #003a5f;
+  background-color: var(--color_style);
   color: white;
   border-radius: 10px;
   padding: 8px 1em;
@@ -295,7 +297,7 @@ a.selected {
 .form-container h2 {
   text-align: center;
   margin-bottom: 20px;
-  color: #003a5f;
+  color: var(--color_style);
 }
 
 .form-container label {
@@ -315,7 +317,7 @@ a.selected {
 .form-container button {
   padding: 10px;
   width: 25%;
-  background-color: #003a5f;
+  background-color: var(--color_style);
   color: white;
   border: none;
   border-radius: 4px;
@@ -323,7 +325,7 @@ a.selected {
 }
 
 .form-container button:hover {
-  background-color: #00578f;
+  background-color: var(--color_style);
 }
 
 .form-container .form-group {
@@ -355,7 +357,7 @@ a.selected {
 }
 
 .card-header {
-  background-color: #003a5f;
+  background-color: var(--color_style);
   padding: 20px;
 }
 
@@ -366,23 +368,45 @@ a.selected {
   border: 3px solid #fff;
 }
 
-.card-body {
-  padding: 20px;
+.body-content{
+  display: flex;
+  max-width: 100%;
+  justify-content: space-between;
 }
 
-.card-body h2 {
+.content-img{
+  margin: 0 auto;
+  width: calc(40% - 150px);
+}
+
+.content-desc{
+  margin: 0 auto;
+  width: calc(60% + 20px);
+}
+
+.content-img .profile-descano{
+  max-width: 200px;
+  border-radius: 95%;
+}
+
+
+.card-body {
+  padding: 10px;
+}
+
+.card-body h2 , .content-desc h2{
   margin: 10px 0 5px 0;
   font-size: 24px;
   color: #333;
 }
 
-.card-body h4 {
+.card-body h4, .content-desc h4{
   margin: 0 0 15px 0;
   font-size: 18px;
   color: #777;
 }
 
-.card-body p {
+.card-body p , .content-desc p{
   color: #555;
   font-size: 16px;
 }
@@ -394,8 +418,7 @@ a.selected {
 }
 
 .card-footer a {
-  display: block;
-  color: #003a5f;
+  color: var(--color_style);
   text-decoration: none;
   font-weight: bold;
   margin: 5px 0;
@@ -470,3 +493,37 @@ a.selected {
   padding: 10px 20px;
   border-radius: 4px;
 }
+
+.message{
+  color: red;
+}
+.hidden{
+  display: none;
+}
+/* style submenu */
+
+.submenu ul{
+  list-style: none;
+}
+.icon_title{
+  display: flex;
+}
+
+.options__menu a.links_menu:hover .submenu{
+  display: initial;
+}
+
+.submenu a{
+  all:unset;
+}
+.submenu h4{
+  padding-left: 40px;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+}
+
+.submenu h4:hover{
+  background-color: #86DEF8;
+}
+
